# REAPER

./: CMakeCache.txt  CMakeLists.txt  README.md
.github/instructions/: cform.instructions.md  general.instructions.md  instructions.instructions.md
.github/workflows/: cmake_build.yml
docs/: AGENT-REFERENCE.MD  NEW-PROMPT.MD  PROGRESS-LOG.MD  SOUNDBRIDGE_DESIGN.md  TODO.TXT  proposal_smooth_sprites.md
game/: CMakeLists.txt
game/Doom/: d_main.cpp  doomdef.cpp  doomdef.h
game/Doom/Base/: i_texcache.cpp  s_bridge.h  sounds.def  w_wad.cpp
game/Doom/Game/: p_inter.cpp  p_tick.cpp  p_user.cpp
game/Doom/Renderer/: r_data.cpp  r_local.h  r_main.cpp  r_voxel.h
game/Doom/UI/: m_main.cpp  ti_main.cpp
game/PsyDoom/: Input.cpp  Input.h  InterpFixedT.cpp  InterpFixedT.h  PlayerPrefs.cpp  PlayerPrefs.h  i_modern_input.cpp  i_modern_input.h  wad_compat.cpp  wad_compat.h
game/PsyDoom/Overlay/: AchievementMgr.cpp  AchievementMgr.h  OverlayMain.cpp  OverlayMain.h  achievements.json
game/PsyDoom/Vulkan/: VPipelines.cpp  VPipelines.h
tools/dev_launcher/: CMakeLists.txt  LauncherApp.cpp  ProcessUtilities.cpp  ProcessUtilities.h
